not work, probleb in package.json

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,8 +1,8 @@
-@import "../base/_fonts";
-@import "../base/_colors";
-@import "../base/_reset";
-@import "../base/_functions";
-@import "../base/_functions-em";
+@import "base/fonts";
+@import "base/colors";
+@import "base/reset";
+@import "base/functions";
+@import "base/functions-em";
 ///////////////////////////////////////////  pages /////////////////////////////
 
 
